<resources>
    <string name="app_name">LoginApp</string>
    <string name="witaj_w_coinllet">Witaj w Coinllet!</string>
    <string name="zaloguj">Zaloguj się</string>
    <string name="zaloguj_sie">zaloguj się</string>
    <string name="zarejestruj_sie">Zarejestruj się</string>
    <string name="textview2">Twoje finanse w bezpiecznym miejscu.</string>
    <string name="textview1">Witaj w Coinllet!</string>
    <string name="logo_coinllet">logo_coinllet</string>
    <string name="textview3">Witaj w C0inllet!</string>
    <string name="login">Login</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="face_id">face_id</string>
    <string name="finger_id">finger_id</string>
    <string name="back_id">back_id</string>
    <string name="panel_rejestracji">Panel rejestracji</string>
    <string name="przejd_dalejz">Przejdź dalej</string>
    <string name="przejdz_dalej">Przejdź dalej</string>
    <string name="panel_rejestracji1">Panel rejestracji 1/4</string>
    <string name="name">Imię</string>
    <string name="drugieImie">Drugie imię</string>
    <string name="podaj_imie">Podaj imię</string>
    <string name="podaj_drugie_imie">Podaj drugie imię</string>
    <string name="data_urodzenia">Data urodzenia</string>
    <string name="podaj_date_urodzenia">Podaj datę urodzenia</string>
    <string name="podaj_nazwisko">Podaj nazwisko</string>
    <string name="pesel">Numer PESEL</string>
    <string name="podaj_pesel">Podaj PESEL</string>
    <string name="panel_rejestracji2">Panel Rejestracji 2/4</string>
    <string name="password">Hasło</string>
    <string name="podaj_haslo">Podaj hasło</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="panel_rejestracji3">Panel Rejestracji 3/4</string>
    <string name="miasto">Miasto</string>
    <string name="podaj_miasta">Podaj miasto</string>
    <string name="podaj_ulice">Podaj ulicę</string>
    <string name="ulica">Ulica</string>
    <string name="kod_pocztowy">Kod pocztowy</string>
    <string name="numer_domu">Numer domu</string>
    <string name="podaj_numer_domu">Podaj numer domu</string>
    <string name="podaj_kod_pocztowy">Podaj kod pocztowy</string>
    <string name="panel_rejestracji4">Panel Rejestracji 4/4</string>
    <string name="zaloz_konto">Załóż konto</string>
    <string name="email">Email</string>
    <string name="textview4">Twój stan konta:</string>
    <string name="panel_rejestracji5">Panel rejestracji</string>
</resources>