<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/registerTextView3"
        android:text="@string/panel_rejestracji3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:contentDescription="@string/back_id"
        android:scaleType="centerInside"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo_coinllet"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <TextView
        android:id="@+id/miastoText"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/miasto"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textMiasto"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_miasta"
        app:layout_constraintBottom_toBottomOf="@+id/miastoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/miastoText"
        app:layout_constraintTop_toTopOf="@+id/miastoText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ulicaText"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ulica"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMiasto" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputUlica"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_ulice"
        app:layout_constraintBottom_toBottomOf="@+id/ulicaText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ulicaText"
        app:layout_constraintTop_toTopOf="@+id/ulicaText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/kodPocztowyText"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/kod_pocztowy"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputUlica" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputKodPocztowy"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_kod_pocztowy"
        app:layout_constraintBottom_toBottomOf="@+id/kodPocztowyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/kodPocztowyText"
        app:layout_constraintTop_toTopOf="@+id/kodPocztowyText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/numerDomuText"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/numer_domu"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputKodPocztowy" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputNumerDomu"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_numer_domu"
        app:layout_constraintBottom_toBottomOf="@+id/numerDomuText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numerDomuText"
        app:layout_constraintTop_toTopOf="@+id/numerDomuText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:text="@string/przejdz_dalej"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputKodPocztowy"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
