<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/registerTextView"
        android:text="@string/panel_rejestracji1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:contentDescription="@string/back_id"
        android:scaleType="centerInside"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo_coinllet"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameText"
        android:text="@string/name"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_imie"
        app:layout_constraintBottom_toBottomOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="@+id/nameText" />

    <TextView
        android:id="@+id/secondNameText"
        android:text="@string/drugieImie"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputSecondName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_drugie_imie"
        app:layout_constraintBottom_toBottomOf="@+id/secondNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/secondNameText"
        app:layout_constraintTop_toTopOf="@+id/secondNameText" />

    <TextView
        android:id="@+id/lastNameText"
        android:text="Nazwisko"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/secondNameText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputLastName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_nazwisko"
        app:layout_constraintBottom_toBottomOf="@+id/lastNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lastNameText"
        app:layout_constraintTop_toTopOf="@+id/lastNameText" />


    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/data_urodzenia"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameText" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputDateOfBirth"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_date_urodzenia"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/dateOfBirth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateOfBirth"
        app:layout_constraintTop_toTopOf="@+id/dateOfBirth" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/dateOfBirth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateOfBirth"
        app:layout_constraintTop_toTopOf="@+id/dateOfBirth"/>


    <TextView
        android:id="@+id/peselText"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/pesel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPesel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_pesel"
        app:layout_constraintBottom_toBottomOf="@+id/peselText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/peselText"
        app:layout_constraintTop_toTopOf="@+id/peselText"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/buttonNext"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:text="@string/przejdz_dalej"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peselText"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
