<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="Panel logowania"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:contentDescription="@string/back_id"
        android:scaleType="centerInside"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo_coinllet"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/login"
        app:layout_constraintTop_toTopOf="@+id/loginText"
        app:layout_constraintBottom_toBottomOf="@+id/loginText"
        app:layout_constraintStart_toEndOf="@+id/loginText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        app:layout_constraintTop_toTopOf="@+id/passwordText"
        app:layout_constraintBottom_toBottomOf="@+id/passwordText"
        app:layout_constraintStart_toEndOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:text="@string/zaloguj_sie"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFingerprint"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/btnFingerprint"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="8dp"
        android:background="@null"
        android:contentDescription="@string/finger_id"
        android:scaleType="centerInside"
        android:src="@drawable/finger"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLogin"
        app:layout_constraintEnd_toStartOf="@+id/btnFace"
        app:layout_constraintStart_toEndOf="@+id/buttonLogin"
        app:layout_constraintTop_toTopOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnFace"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:background="@null"
        android:contentDescription="@string/face_id"
        android:scaleType="centerInside"
        android:src="@drawable/face"
        app:layout_constraintBottom_toBottomOf="@+id/btnFingerprint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFingerprint"
        app:layout_constraintTop_toTopOf="@+id/btnFingerprint"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
